Support iinc instruction